# Parkinson

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: base.yaml  logging.yaml  paths.yaml  random_seed.yaml  version.yaml
docs/: configuration_guide.md  environment_setup.md  migration_guide.md
leaderboard/: classification.csv  ensemble_classification.csv
metadata/: REPOSITORY_FREEZE.json  benchmark_manifest.json  cohort_fingerprint.json  cohort_manifest.json  data_contracts.json  dataset_catalog.json  dependency_registry.json  ensemble_registry.json  experiment_manifest.json  feature_hashes.json  feature_importance_registry.json  feature_lineage.json  feature_provenance.json  feature_registry.csv  feature_registry.json  feature_selection_registry.json  feature_versions.json  fold_registry.json  graph_registry.json  merge_catalog.json  modality_catalog.json  optimization_registry.json  publication_manifest.json  xai_registry.json
reports/: BENCHMARK_FINAL_CERTIFICATE.md  BENCHMARK_INTEGRITY_REPORT.md  BENCHMARK_READY_CERTIFICATE.md  BENCHMARK_V1_FREEZE_CERTIFICATE.md  BEST_HYPERPARAMETERS.md  CROSS_VALIDATION_REPORT.md  DATASET_PIPELINE_REPORT.md  DEPENDENCY_REPORT.md  ENSEMBLE_REPORT.md  EXECUTIVE_SUMMARY.md  EXPLAINABILITY_CERTIFICATE.md  FAILED_ENSEMBLE_COMPONENTS.md  FAILED_EXPERIMENTS.md  FAILED_XAI_COMPONENTS.md  FEATURE_ENGINEERING_V1_CERTIFICATE.md  FEATURE_READINESS_SCORECARD.md  FEATURE_SELECTION_CERTIFICATE.md  FEATURE_SELECTION_REPORT.md  FEATURE_SELECTION_VALIDATION.md  HPO_REPORT.md  (+46 more)
(+235 files in other folders)
