[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parkinson_benchmark"
version = "0.1.0"
description = "A publication-grade Parkinson's Disease Benchmarking Platform using the PPMI dataset."
authors = [
    { name = "AI Engineering Team", email = "team@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "hydra-core>=1.3.0",
    "mlflow>=2.5.0",
    "tensorboard>=2.13.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "xgboost>=1.7.0",
    "shap>=0.42.0",
    "scipy>=1.10.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "flake8>=6.0.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
    "jupyter>=1.0.0"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true
strict = false
